setup start script and heroku port

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -2,14 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Help Page</title>
+    <title>About Page</title>
   </head>
   <body>
-    <h1>Help Page</h1>
-    <p>some text here</p>
-
-    <footer>
-      <p>copy {{currentYear}}</p>
-    </footer>
+      {{> header}}
+    <!-- <h1>Hi </h1> -->
+    <p>Hi this is done for learning</p>
+{{> footer}}
+   <!-- <footer>
+    //  <p>copy {{currentYear}}</p>
+    //</footer> -->
   </body>
 </html>
