Add project page

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -7,7 +7,7 @@
   <body>
       {{> header}}
     <!-- <h1>Hi </h1> -->
-    <p>Hi this is done for learning</p>
+    <p>Hi this is created for practice</p>
 {{> footer}}
    <!-- <footer>
     //  <p>copy {{currentYear}}</p>
